<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Motion Alarm</string>
    <string name="about">About Us</string>
    <string name="help">Help</string>
    <string name="rate">Rate App</string>
    <string name="contact">Comment here</string>
    <string name="share">Share to friends</string>
    <string name="alarms">Alarms</string>
    <string name="select_sound">Select sound</string>
    <string name="about_title">About Mountain Reacher</string>
    <string name="about_body">My name is Camilo, I study Systems Engineering and Telematics Engineering at ICESI University in Cali, Colombia. </string>
    <string name="help_title">Help</string>
    <string name="help_body">Leave your device still on a flat surface and press the Calibrate sensors button first to ensure the best performance of the app. Scroll the Seekbar to match the sensibility you want, put in how much time (in seconds) you want the alarm to start and press Start alarm.</string>
    <string name="start_alarm_in">Start alarm in</string>
    <string name="turn_off_alarm">Turn off alarm</string>
    <string name="seconds">seconds</string>
    <string name="calibrate_sensors">Calibrate sensors</string>
    <string name="sensibility">Sensibility</string>
    <string name="alarm_on">Alarm on</string>
    <string name="alarm_off">Alarm off</string>
    <string name="calibrate_title">Calibrating the sensors</string>
    <string name="calibrate_text">Please leave the device still for 3 seconds.</string>
    <string name="selected_sound">Selected sound: </string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="do_u_want_exit">Do you want to exit?</string>
    <string name="starting">Starting</string>
    <string name="ready_to_use">Ready to use</string>
    <string name="choose">Choose</string>

</resources>